added comment routes

--- a/app/views/lis/8/home-updated.html
+++ b/app/views/lis/8/home-updated.html
@@ -47,7 +47,7 @@
         </div>
         <br>
         <p>
-          <a class="button" href="part-help" id="next">Agree and submit my application</a>
+          <a class="button" href="end/tabs/view-entitlement-accordian" id="next">Agree and submit my application</a>
         </p>
       </div>
 
