--- a/public/stylesheets/nhs_fonts.css
+++ b/public/stylesheets/nhs_fonts.css
@@ -2,19 +2,16 @@
   font-family: 'nta';
   src: url(/public/fonts/NeueFrutigerComRegular.woff);
   font-weight: normal;
-  font-style: normal;
-}
+  font-style: normal; }
 
 @font-face {
   font-family: 'Frutiger';
   src: url(/public/fonts/NeueFrutigerComRegular.woff);
   font-weight: normal;
-  font-style: normal;
-}
+  font-style: normal; }
 
 @font-face {
   font-family: 'Frutiger';
   src: url(/public/fonts/NeueFrutigerComBold.woff);
   font-weight: bold;
-  font-style: normal;
-}
+  font-style: normal; }
