changed the way people tell us about rented accomodation

--- a/app/views/lis/8/live/address.html
+++ b/app/views/lis/8/live/address.html
@@ -54,7 +54,7 @@
 
     {{
       form_macros.button({
-        href: 'rent',
+        href: 'rent-frequency',
         label: 'Save and continue'
       })
     }}
