--- a/app/views/lis/8/live/others/benefits.html
+++ b/app/views/lis/8/live/others/benefits.html
@@ -14,9 +14,9 @@
     <div class="column-two-thirds">
 
       <h1 class="heading-large">
-          Do you get any of these benefits?
+          Do they get any of these benefits?
       </h1>
-      <p>Select all the benefits you get.</p>
+      <p>Select all the benefits they get.</p>
 
       <form action="" method="get" class="form">
         <div class="form-item-wrapper">
