--- a/app/views/lis/8/partner/benefits/mobility-component.html
+++ b/app/views/lis/8/partner/benefits/mobility-component.html
@@ -49,7 +49,7 @@
           <div class="form-group">
             <input type="radio" id="high" name="contact">
             <label class="form-control-radio js-toggle" for="high" data-show="#contact-email-address" data-hide="#contact-mobile-number">
-              High (£57.45)
+              Highest (£57.45)
             </label>
           </div>
 
