--- a/app/views/lis/8/you/pension/pension-amount.html
+++ b/app/views/lis/8/you/pension/pension-amount.html
@@ -17,7 +17,7 @@
        How often do you get your State Pension?
       </h1>
 
-      <form action="sp-handler" method="get" class="form">
+      <form action="" method="get" class="form">
 
       <div class="form-item-wrapper">
         <div class="form-group">
@@ -53,7 +53,7 @@
       </div>
     {{
       form_macros.amount_field({
-        id: 'amount',
+        id: 'money-amount',
         label: 'How much do you get?'
       })
     }}
