--- a/app/views/lis/8/live/rent.html
+++ b/app/views/lis/8/live/rent.html
@@ -15,23 +15,23 @@
   <!-- <p class="navigation"><a class="back-to-previous">Back</a></p> -->
 
   <h1 class="heading-large">
-    Who do you pay your rent to?
+   Do you pay your rent to parents, relatives or friends?
   </h1>
-  <form action="" method="get" class="form">
+  <form action="prf-handler" method="get" class="form">
 
     <div class="form-item-wrapper">
       <fieldset>
         <div class="inline-form-groups">
           <div class="form-group">
-            <input type="radio" id="email" name="contact">
-            <label class="form-control-radio" for="email" data-show="#contact-email-address" data-hide="#contact-mobile-number">
-              A landlord
+            <input type="radio" id="yes" value="yes" name="prf">
+            <label class="form-control-radio" for="yes" data-show="#contact-email-address" data-hide="#contact-mobile-number">
+              Yes
             </label>
           </div>
           <div class="form-group">
-            <input type="radio" id="mobile" name="contact">
-            <label class="form-control-radio" for="mobile" data-hide="#contact-email-address">
-              Parents, relatives or friends
+            <input type="radio" id="no" name="prf">
+            <label class="form-control-radio" for="no" value="no" data-hide="#contact-email-address">
+              No
             </label>
           </div>
         </div>
@@ -40,7 +40,6 @@
 
     {{
       form_macros.button({
-        href: 'rent-frequency',
         label: 'Save and continue'
       })
     }}
