--- a/app/views/lis/8/partner/pension/private-pension-amount.html
+++ b/app/views/lis/8/partner/pension/private-pension-amount.html
@@ -58,30 +58,10 @@ How often does your partner get their private pension payments?  </h1>
 
     </div>
 
- <div class="form-item-wrapper">
-            <fieldset>
-                <h2 class="heading-medium">Does your partner have another private pension?</h2>
-
-              <div class="inline-form-groups">
-                <div class="form-group">
-                  <input type="radio" id="binary-yes" name="pension" value="yes">
-                  <label class="form-control-radio" for="binary-yes">
-                    Yes
-                  </label>
-                </div>
-                <div class="form-group">
-                  <input type="radio" id="binary-no" name="pension" value="no">
-                  <label class="form-control-radio" for="binary-no">
-                    No
-                  </label>
-                </div>
-              </div>
-            </fieldset>
-          </div>
-
     {{
       form_macros.button({
-        label: 'Save and continue'
+        label: 'Save and continue',
+        href : 'another-pp'
       })
     }}
     <p class="navigation"><a class="cancel" href="../../lis-home">Save and come back later</a></p>
