updated the contact preferences for text

--- a/app/views/lis/8/you/contact-prefs.html
+++ b/app/views/lis/8/you/contact-prefs.html
@@ -19,7 +19,7 @@
 
       <p>Select all the ways we can get in touch.</p>
 
-      <form action="contact-handler" method="get" class="form">
+      <form action="contact-handler2" method="get" class="form">
 
         <div class="form-group">
           <input type="checkbox" id="email" name="contact" value="email">
