--- a/app/views/lis/8/you/telephone.html
+++ b/app/views/lis/8/you/telephone.html
@@ -42,7 +42,7 @@
             {{
               form_macros.text_field({
                 id: 'firstname',
-                label: 'Telephone number'
+                label: 'What telephone number should we contact you on?'
               })
             }}
           </div>
