--- a/app/views/lis/8/assets/assets-summary.html
+++ b/app/views/lis/8/assets/assets-summary.html
@@ -9,7 +9,10 @@
 
 <main id="content" role="main">
 
+<div class="grid-row">
+    <div class="column-two-thirds">
 
+  <div class="text">
     <h1 class="heading-large">
       Check your answers
     </h1>
@@ -75,7 +78,9 @@
         })
       }}
     </form>
-
+      </div>
+      </div>
+      </div>
 
 </main>
 
