--- a/app/views/lis/8/live/living-summary.html
+++ b/app/views/lis/8/live/living-summary.html
@@ -8,7 +8,10 @@
 {% block content %}
 
 <main id="content" role="main">
+<div class="grid-row">
+    <div class="column-two-thirds">
 
+  <div class="text">
 
     <h1 class="heading-large">
       Check your answers
@@ -142,7 +145,9 @@
         })
       }}
     </form>
-
+      </div>
+      </div>
+      </div>
 
 </main>
 
