--- a/app/views/lis/8/partner/summary-no.html
+++ b/app/views/lis/8/partner/summary-no.html
@@ -8,7 +8,10 @@
 {% block content %}
 
 <main id="content" role="main">
+<div class="grid-row">
+    <div class="column-two-thirds">
 
+  <div class="text">
 
 
     <h1 class="heading-large">
@@ -31,7 +34,9 @@
         })
       }}
     </form>
-
+      </div>
+      </div>
+      </div>
 
 </main>
 
