--- a/app/views/lis/8/you/about-you-summary.html
+++ b/app/views/lis/8/you/about-you-summary.html
@@ -9,7 +9,10 @@
 
 <main id="content" role="main">
 
-      
+      <div class="grid-row">
+    <div class="column-two-thirds">
+
+  <div class="text">
       <h1 class="heading-large">
         Check your answers
       </h1>
@@ -126,6 +129,10 @@
         })
       }}
     </form>
+    
+      </div>
+      </div>
+      </div>
 
 </main>
 
