--- a/app/views/lis/8/you/pension/pension-amount.html
+++ b/app/views/lis/8/you/pension/pension-amount.html
@@ -17,7 +17,7 @@
        How often do you get your State Pension?
       </h1>
 
-      <form action="" method="get" class="form">
+      <form action="sp-handler" method="get" class="form">
 
       <div class="form-item-wrapper">
         <div class="form-group">
