updated the home page for sprint 8

--- a/app/views/lis/8/partner/benefits/pip-mobility-component.html
+++ b/app/views/lis/8/partner/benefits/pip-mobility-component.html
@@ -12,7 +12,7 @@
   <div class="grid-row">
     <div class="column-two-thirds">
   <h1 class="heading-large">
-    Does their personal independence payment include the mobility component?
+    Do they get the mobility component of Personal Independence Payment?
   </h1>
 
   <form action="" method="get" class="form">
@@ -41,13 +41,13 @@
           <div class="form-group">
             <input type="radio" id="low" name="contact">
             <label class="form-control-radio js-toggle" for="low" data-show="#contact-email-address" data-hide="#contact-mobile-number">
-              Standard rate
+              Lower (£21.80)
             </label>
           </div>
           <div class="form-group">
             <input type="radio" id="middle" name="contact">
             <label class="form-control-radio js-toggle" for="middle" data-show="#contact-email-address" data-hide="#contact-mobile-number">
-              Enhanced rate
+              Highest (£57.45)
             </label>
           </div>
         </div>
