--- a/app/views/lis/8/partner/benefits/pip.html
+++ b/app/views/lis/8/partner/benefits/pip.html
@@ -12,7 +12,7 @@
   <div class="grid-row">
     <div class="column-two-thirds">
   <h1 class="heading-large">
-    Does their personal independence payment include the daily living component?
+    Do they get the daily living component of Personal Independence Payment?
   </h1>
 
   <!-- <p class="navigation"><a class="back-to-previous">Back</a></p> -->
@@ -43,13 +43,13 @@
           <div class="form-group">
             <input type="radio" id="low" name="contact">
             <label class="form-control-radio js-toggle" for="low" data-show="#contact-email-address" data-hide="#contact-mobile-number">
-              Standard rate
+              Standard (£55.10)
             </label>
           </div>
           <div class="form-group">
             <input type="radio" id="middle" name="contact">
             <label class="form-control-radio js-toggle" for="middle" data-show="#contact-email-address" data-hide="#contact-mobile-number">
-              Enhanced rate
+              Enhanced (£82.30)
             </label>
           </div>
         </div>
