--- a/app/views/lis/8/start.html
+++ b/app/views/lis/8/start.html
@@ -12,7 +12,7 @@
 
         <div class="heading-group">
           <h1 class="heading-xlarge">Get help with health costs</h1>
-          <h2 class="heading-large">The low income scheme</h2>
+          <h2 class="heading-large">The Low Income Scheme</h2>
         </div>
 
         <p>You can already claim help with health costs if you have an NHS Tax Credit Exemption Certificate or get any of these benefits:</p>
