--- a/app/views/lis/8/partner/benefits/mobility-component.html
+++ b/app/views/lis/8/partner/benefits/mobility-component.html
@@ -17,7 +17,7 @@
 
   <!-- <p class="navigation"><a class="back-to-previous">Back</a></p> -->
 
-  <form action="" method="get" class="form">
+  <form action="dla-handler" method="get" class="form">
     <div class="form-item-wrapper">
       <fieldset>
         <div class="inline-form-groups">
@@ -59,8 +59,7 @@
 
     {{
       form_macros.button({
-        label: 'Save and continue',
-        href: 'benefit4'
+        label: 'Save and continue'
       })
     }}
 
