--- a/app/views/lis/8/you/about-you-summary.html
+++ b/app/views/lis/8/you/about-you-summary.html
@@ -25,22 +25,22 @@
           <tr>
             <td>Full name</td>
             <td>{{applicantFullName}}</td>
-            <td><a href="#">Change this</a></td>
+            <td><a href="registration">Change this</a></td>
           </tr>
           <tr>
             <td>Date of birth</td>
             <td>{{dobday}} {{dobmonth}} {{dobyear}}</td>
-            <td><a href="">Change this</a></td>
+            <td><a href="dob">Change this</a></td>
           </tr>
           <tr>
             <td>How would you like us to contact you?</td>
             <td>{{contact}}</td>
-            <td><a href="education">Change this</a></td>
+            <td><a href="contact-prefs">Change this</a></td>
           </tr>
           <tr>
             <td>{{contacttext}}</td>
             <td>{{contactvalue}}</td>
-            <td><a href="pension/pension">Change this</a></td>
+            <td><a href="email">Change this</a></td>
           </tr>
         </table>
 
@@ -49,12 +49,12 @@
           <tr>
             <td>Do you have a job?</td>
             <td>No</td>
-            <td><a href="pension/pension-type">Change this</a></td>
+            <td><a href="work">Change this</a></td>
           </tr>
           <tr>
             <td>Are you in full time education?</td>
             <td>No</td>
-            <td><a href="pension/pension-type">Change this</a></td>
+            <td><a href="education">Change this</a></td>
           </tr>
         </table>
 
@@ -63,22 +63,22 @@
           <tr>
             <td>Do you get a pension?</td>
             <td>Yes</td>
-            <td><a href="pension/private-pension-amount">Change this</a></td>
+            <td><a href="pension/pension">Change this</a></td>
           </tr>
           <tr>
             <td>Do you get Pension Credit Savings Credit?</td>
             <td>{{savingscredit}}</td>
-            <td><a href="pension/private-pension-amount">Change this</a></td>
-          </tr>
-          <tr>
-            <td>About your state pension</td>
-            <td>£{{statepensionamount}} {{statepensionfrequency}}</td>
-            <td><a href="pension/private-pension-amount">Change this</a></td>
+            <td><a href="pension/pension-credit">Change this</a></td>
           </tr>
           <tr>
             <td>About your Pension Credit Savings Credit payments?</td>
             <td>£121 per week</td>
             <td><a href="pension/private-pension-amount">Change this</a></td>
+          </tr>
+          <tr>
+            <td>About your state pension</td>
+            <td>£{{statepensionamount}} {{statepensionfrequency}}</td>
+            <td><a href="pension/pension-amount">Change this</a></td>
           </tr>
           <tr>
             <td>About your private pension</td>
@@ -92,17 +92,17 @@
           <tr>
             <td>Do you get any of these benefits?</td>
             <td>No</td>
-            <td><a href="benefits/care-allowance">Change this</a></td>
+            <td><a href="benefits/benefit-sprint3">Change this</a></td>
           </tr>
           <tr>
-            <td>Are you looking after someone but can’t get carers allowance because of another benefit?</td>
+            <td>Do you look after someone but cannot get Carer’s Allowance because of another reason?</td>
             <td>No</td>
-            <td><a href="benefits/care-allowance">Change this</a></td>
+            <td><a href="benefits/benefit4">Change this</a></td>
           </tr>
           <tr>
             <td>Does someone get Carer’s Allowance for looking after you?</td>
             <td>No</td>
-            <td><a href="benefits/other-money">Change this</a></td>
+            <td><a href="benefits/care-allowance">Change this</a></td>
           </tr>
              <tr>
             <td>Do you get any other money?</td>
