updated the partner summary

--- a/app/views/lis/8/partner/summary-no.html
+++ b/app/views/lis/8/partner/summary-no.html
@@ -20,9 +20,9 @@
 
     <table class="data-table">
       <tr>
-        <td>Do you have a partner?</td>
+        <td>Do you live with a partner?</td>
         <td>No</td>
-        <td><a href="partner">Change this</a></td>
+        <td><a href="p-status">Change this</a></td>
       </tr>
     </table>
 
