--- a/app/views/lis/8/you/about-you-summary.html
+++ b/app/views/lis/8/you/about-you-summary.html
@@ -71,7 +71,7 @@
             <td><a href="pension/pension-credit">Change this</a></td>
           </tr>
           <tr>
-            <td>About your Pension Credit Savings Credit payments?</td>
+            <td>Your Pension Credit Savings Credit payments?</td>
             <td>£121 per week</td>
             <td><a href="pension/private-pension-amount">Change this</a></td>
           </tr>
